--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', blogs_path %>
+<div class ="control-group pull-right">
+  <%= link_to 'Back', blogs_path, class: 'btn btn-default' %>
+</div>
