--- a/app/assets/stylesheets/blogs.css.scss
+++ b/app/assets/stylesheets/blogs.css.scss
@@ -1,3 +1,62 @@
 // Place all the styles related to the blogs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: #555;
+}
+
+.container {
+  width: 970px
+}
+
+.blog-main {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.blog-title {
+  margin-top: 30px;
+  margin-bottom: 40px;
+  font-weight: normal;
+  // font-family: "Fjalla One" "Georgia" "Helvetica Neue" Arial sans-serif
+}
+
+.blog-post-title {
+  margin-bottom: 5px;
+}
+
+.blog-post-meta {
+  margin-bottom: 20px;
+  color: #999;
+}
+
+.blog-post {
+  margin-bottom: 60px;
+  border-bottom: 1px dotted #eee;
+  .image {
+    margin-bottom: 20px;
+    max-height: 400px;
+    max-width: 600px
+  }
+}
+
+.sidebar-module {
+  padding: 15px;
+  margin: 50px -15px 15px;
+}
+
+.sidebar-module-inset {
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+
+footer {
+  margin-top: 30px;
+  padding: 40px 0;
+  color: #999;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: 1px solid #e5e5e5;
+}
