--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@blog, :html => {:multipart => true}) do |f| %>
+<%= form_for(@blog, :html => {:multipart => true, :class => "form-horizontal"}) do |f| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
@@ -10,20 +10,31 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-group">
+    <%= f.label :title, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-6">
+      <%= f.text_field :title, :class => "form-control" %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <%= f.label :content, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_area :content, :class => "form-control", :rows => "10" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+
+  <div class="form-group">
+    <%= f.label :picture, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-6">
+      <%= f.file_field :picture %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :picture %><br>
-    <%= f.file_field :picture %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="actions">
+        <%= f.submit :class => "btn btn-default" %>
+      </div>
+    </div>
   </div>
 <% end %>
